--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -285,7 +285,226 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script><h1>Brython</h1>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+<h1>HW</h1>
+<!-- 導入 brython 程式庫 -->
+<p>
+<script src="/static/brython.js"></script>
+<script src="/static/brython_stdlib.js"></script>
+</p>
+<!-- 啟動 Brython -->
+<p>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['/static/','./../downloads/py/']});
+}
+</script>
+</p>
+<p><!-- 導入 FileSaver 與 filereader --></p>
+<p>
+<script src="/static/ace/FileSaver.min.js" type="text/javascript"></script>
+<script src="/static/ace/filereader.js" type="text/javascript"></script>
+</p>
+<p><!-- 導入 ace --></p>
+<p>
+<script src="/static/ace/ace.js" type="text/javascript"></script>
+<script src="/static/ace/ext-language_tools.js" type="text/javascript"></script>
+<script src="/static/ace/mode-python3.js" type="text/javascript"></script>
+<script src="/static/ace/snippets/python.js" type="text/javascript"></script>
+</p>
+<p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
+<script src="/static/Cango-24v03-min.js"></script>
+<script src="/static/gearUtils-09.js"></script>
+<script src="/static/SVGpathUtils-6v03-min.js"></script>
+<script src="/static/sylvester.js"></script>
+<script src="/static/PrairieDraw.js"></script>
+</p>
+<p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src1"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
+<p>
+<script type="text/javascript">
+function doSave(storage_id, filename){
+    var blob = new Blob([localStorage[storage_id]], {type: "text/plain;charset=utf-8"});
+    filename = document.getElementById(filename).value
+    saveAs(blob, filename+".py");
+}
+</script>
+</p>
+<p>
+<script type="text/python3">
+from browser import document as doc
+import ace
+# 清除畫布
+def clear_bd1(ev):
+    bd = doc["brython_div1"]
+    bd.clear()
+Ace1 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
+# 從 gist 取出程式碼後, 放入 editor 作為 default 程式
+def run1():
+    # 利用 get 取下 src 變數值
+    try:
+        url = doc.query["src"]
+    except:
+        url = "https://gist.githubusercontent.com/mdecourse/0229a8a017091476a79700b8a190f185/raw/c3a6deaf717f8f2739a4b1392a5ab10936e9693a/from_1_add_to_10_1.py"
+    prog = open(url).read()
+
+    # 將程式載入編輯區
+    Ace1.editor.setValue(prog)
+    Ace1.editor.scrollToRow(0)
+    Ace1.editor.gotoLine(0)
+    # 直接執行程式
+    #ns = {'__name__':'__main__'}
+    #exec(prog, ns)
+    # 按下 run 按鈕
+    Ace1.run()
+
+# 執行程式, 顯示輸出結果與清除輸出結果及對應按鈕綁定
+doc['kw_run1'].bind('click', Ace1.run)
+doc['kw_show_console1'].bind('click', Ace1.show_console)
+doc['kw_clear_console1'].bind('click', Ace1.clear_console)
+doc['clear_bd1'].bind('click', clear_bd1)
+# 呼叫函式執行
+run1()
+</script>
+</p>
+<p><!-- add 1 to 100 開始 -->
+<script type="text/python3">
+from browser import document as doc
+import ace
+
+# 清除畫布
+def clear_bd1(ev):
+    bd = doc["brython_div1"]
+    bd.clear()
+
+# 利用 ace 中的 Editor 建立 Ace2 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
+Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
+
+add1to100_url = "https://gist.githubusercontent.com/mdecourse/0229a8a017091476a79700b8a190f185/raw/c48e37714f055c3a0027cbfef59e442a6ef659b9/from_1_add_to_100_1.py"
+
+# 從 gist 取得程式碼
+add_src = open(add1to100_url).read()
+def add(ev):
+    Ace2.editor.setValue(add_src)
+    Ace2.editor.scrollToRow(0)
+    Ace2.editor.gotoLine(0)
+    Ace2.run()
+
+# id 為 "add1to100" 的按鈕點按時, 執行 add 方法
+doc["add1to100"].bind('click', add)
+</script>
+</p>
+<p><!-- add 1 to 100 結束--></p>
+<!-- editor1 開始 -->
+<p><!-- 用來顯示程式碼的 editor 區域 --></p>
+<div id="kw_editor1" style="width: 600px; height: 300px;">
+<div>
+<pre><span class="cm-line"><span class="cm-keyword">import</span> <span class="cm-variable">ast</span>
+</span><span class="cm-line">
+</span><span class="cm-line"><span class="cm-comment"># get stud_list first</span>
+</span><span class="cm-line">
+</span><span class="cm-line"><span class="cm-keyword">def</span> <span class="cm-def">get_stud</span>(<span class="cm-variable">c_name</span>):
+</span><span class="cm-line">    <span class="cm-variable">courses</span> <span class="cm-operator">=</span> {<span class="cm-string">"1a"</span>: <span class="cm-string">"0747"</span>, <span class="cm-string">"1b"</span>: <span class="cm-string">"0761"</span>, <span class="cm-string">"2a"</span>: <span class="cm-string">"0773"</span>, <span class="cm-string">"2b"</span>: <span class="cm-string">"0786"</span>}
+</span><span class="cm-line">    <span class="cm-comment">#c_name = "1b"</span>
+</span><span class="cm-line">    <span class="cm-variable">c</span> <span class="cm-operator">=</span> <span class="cm-variable">courses</span>[<span class="cm-variable">c_name</span>]
+</span><span class="cm-line">    <span class="cm-variable">url</span> <span class="cm-operator">=</span> <span class="cm-string">"https://nfu.cycu.org/?semester=1111&amp;courseno="</span> <span class="cm-operator">+</span> <span class="cm-variable">c</span> <span class="cm-operator">+</span> <span class="cm-string">"&amp;column=True"</span>
+</span><span class="cm-line">    <span class="cm-variable">data</span> <span class="cm-operator">=</span> <span class="cm-builtin">open</span>(<span class="cm-variable">url</span>).<span class="cm-property">read</span>().<span class="cm-property">split</span>(<span class="cm-string">"\n"</span>)
+</span><span class="cm-line">    <span class="cm-variable">stud</span> <span class="cm-operator">=</span> <span class="cm-variable">data</span>[:<span class="cm-operator">-</span><span class="cm-number">1</span>]
+</span><span class="cm-line">    <span class="cm-keyword">return</span> <span class="cm-variable">stud</span>
+</span><span class="cm-line">    
+</span><span class="cm-line"><span class="cm-variable">cp_stud</span> <span class="cm-operator">=</span> <span class="cm-variable">get_stud</span>(<span class="cm-string">"1b"</span>)
+</span><span class="cm-line">
+</span><span class="cm-line"><span class="cm-comment"># get w10 quiz result</span>
+</span><span class="cm-line"><span class="cm-variable">cp_w11_quiz_url</span> <span class="cm-operator">=</span> <span class="cm-string">"https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/8e59f90d8ff4f1ad4fecd4f7ee159f91eb6addf9/cp1b_w11_quiz_result.json"</span>
+</span><span class="cm-line"><span class="cm-variable">cp_w10_quiz_url</span> <span class="cm-operator">=</span> <span class="cm-string">"https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/a6825f13b1bb0b61e09e74dd117729eefe1d947f/20221110_cp1b_w10_quiz.json"</span>
+</span><span class="cm-line">
+</span><span class="cm-line"><span class="cm-keyword">def</span> <span class="cm-def">get_score</span>(<span class="cm-variable">url</span>):
+</span><span class="cm-line">    <span class="cm-variable">num_stud</span> <span class="cm-operator">=</span> <span class="cm-number">0</span>
+</span><span class="cm-line">    <span class="cm-variable">total_score</span> <span class="cm-operator">=</span> <span class="cm-number">0</span>
+</span><span class="cm-line">    <span class="cm-variable">json_data</span> <span class="cm-operator">=</span> <span class="cm-builtin">open</span>(<span class="cm-variable">url</span>).<span class="cm-property">read</span>()
+</span><span class="cm-line">    <span class="cm-variable">big_dict</span> <span class="cm-operator">=</span> <span class="cm-variable">ast</span>.<span class="cm-property">literal_eval</span>(<span class="cm-variable">json_data</span>)
+</span><span class="cm-line">    <span class="cm-variable">data</span> <span class="cm-operator">=</span> <span class="cm-variable">big_dict</span>[<span class="cm-string">"body"</span>][<span class="cm-string">"testuser"</span>]
+</span><span class="cm-line">    <span class="cm-variable">quiz_dict</span> <span class="cm-operator">=</span> {}
+</span><span class="cm-line">    <span class="cm-keyword">for</span> <span class="cm-variable">i</span> <span class="cm-keyword">in</span> <span class="cm-variable">data</span>:
+</span><span class="cm-line">        <span class="cm-variable">stud_id</span> <span class="cm-operator">=</span> <span class="cm-variable">data</span>[<span class="cm-variable">i</span>][<span class="cm-string">"user_name"</span>]
+</span><span class="cm-line">        <span class="cm-variable">stud_score</span> <span class="cm-operator">=</span> <span class="cm-builtin">int</span>(<span class="cm-builtin">float</span>(<span class="cm-variable">data</span>[<span class="cm-variable">i</span>][<span class="cm-string">"total_score"</span>]))
+</span><span class="cm-line">        <span class="cm-variable">quiz_dict</span>[<span class="cm-variable">stud_id</span>] <span class="cm-operator">=</span> <span class="cm-variable">stud_score</span>
+</span><span class="cm-line">        <span class="cm-variable">num_stud</span> <span class="cm-operator">=</span> <span class="cm-variable">num_stud</span> <span class="cm-operator">+</span> <span class="cm-number">1</span>
+</span><span class="cm-line">        <span class="cm-variable">total_score</span> <span class="cm-operator">=</span> <span class="cm-variable">total_score</span> <span class="cm-operator">+</span> <span class="cm-variable">stud_score</span>
+</span><span class="cm-line">    <span class="cm-keyword">return</span> <span class="cm-variable">quiz_dict</span>, <span class="cm-variable">num_stud</span>, <span class="cm-variable">total_score</span>
+</span><span class="cm-line">    
+</span><span class="cm-line"><span class="cm-comment">#cp_quiz, num_stud, total_score = get_score(cp_w10_quiz_url)</span>
+</span><span class="cm-line"><span class="cm-variable">cp_quiz</span>, <span class="cm-variable">num_stud</span>, <span class="cm-variable">total_score</span> <span class="cm-operator">=</span> <span class="cm-variable">get_score</span>(<span class="cm-variable">cp_w11_quiz_url</span>)
+</span><span class="cm-line"><span class="cm-variable">cp_abs</span> <span class="cm-operator">=</span> []
+</span><span class="cm-line"><span class="cm-keyword">for</span> <span class="cm-variable">stud</span> <span class="cm-keyword">in</span> <span class="cm-variable">cp_stud</span>:
+</span><span class="cm-line">    <span class="cm-keyword">try</span>:
+</span><span class="cm-line">        <span class="cm-builtin">print</span>(<span class="cm-variable">stud</span>, <span class="cm-variable">cp_quiz</span>[<span class="cm-variable">stud</span>])
+</span><span class="cm-line">    <span class="cm-keyword">except</span>:
+</span><span class="cm-line">        <span class="cm-comment"># 缺考者沒有 quiz 成績</span>
+</span><span class="cm-line">        <span class="cm-builtin">print</span>(<span class="cm-variable">stud</span>, <span class="cm-string">"缺"</span>)
+</span><span class="cm-line">        <span class="cm-variable">cp_abs</span>.<span class="cm-property">append</span>(<span class="cm-variable">stud</span>)
+</span><span class="cm-line"><span class="cm-builtin">print</span>(<span class="cm-string">"\n考試平均分數為:"</span>, <span class="cm-builtin">int</span>(<span class="cm-variable">total_score</span><span class="cm-operator">/</span><span class="cm-variable">num_stud</span>))
+</span><span class="cm-line"><span class="cm-comment"># 列出缺考名單</span>
+</span><span class="cm-line"><span class="cm-builtin">print</span>(<span class="cm-string">"="</span><span class="cm-operator">*</span><span class="cm-number">20</span>)
+</span><span class="cm-line"><span class="cm-builtin">print</span>(<span class="cm-string">"以下為 w10 缺考名單:"</span>)
+</span><span class="cm-line"><span class="cm-keyword">for</span> <span class="cm-variable">stud</span> <span class="cm-keyword">in</span> <span class="cm-variable">cp_abs</span>:
+</span><span class="cm-line">    <span class="cm-builtin">print</span>(<span class="cm-variable">stud</span>)</span></pre>
+</div>
+</div>
+<p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
+<p><!-- 存擋表單開始 --></p>
+<form><label>Filename: <input id="kw_filename" placeholder="input file name" type="text"/>.py</label> <input onclick="doSave('kw_py_src1', 'kw_filename1');" type="submit" value="Save"/></form>
+<p><!-- 存擋表單結束 --></p>
+<p></p>
+<p><!-- 執行與清除按鈕開始 --></p>
+<p><button id="kw_run1">Run</button> <button id="kw_show_console1">Output</button> <button id="kw_clear_console1">清除輸出區</button><button id="clear_bd1">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p><!-- 執行與清除按鈕結束 --></p>
+<p></p>
+<p><!-- 程式執行 ouput 區 --></p>
+<div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
+<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
+<div id="brython_div1"></div>
+<!-- editor1 結束 --><hr/><!-- ########################################## -->
+<p>從 1 累加到 100 part2:</p>
+<p><button id="add1to100part2">1 add to 100</button><button id="cango_three_gears">cango_three_gears</button><button id="bsnake">BSnake</button><button id="aitetris">AI Tetris</button><button id="threejsblock">Rotating Block</button></p>
+<p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src2"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
+<p>
+<script type="text/python3">
+from browser import document as doc
+import ace
+# 清除畫布
+def clear_bd2(ev):
+    bd = doc["brython_div2"]
+    bd.clear()
+Ace3 = ace.Editor(editor_id="kw_editor2", console_id="kw_console2", container_id="kw__container2", storage_id="kw_py_src2" )
+# 從 gist 取出程式碼後, 放入 editor 作為 default 程式
+def run2():
+    # 利用 get 取下 src 變數值
+    try:
+        url = doc.query["src2"]
+    except:
+        url = "https://gist.githubusercontent.com/mdecourse/0229a8a017091476a79700b8a190f185/raw/c3a6deaf717f8f2739a4b1392a5ab10936e9693a/from_1_add_to_10_1.py"
+    prog = open(url).read()
+
+    # 將程式載入編輯區
+    Ace3.editor.setValue(prog)
+    Ace3.editor.scrollToRow(0)
+    Ace3.editor.gotoLine(0)
+    # 直接執行程式
+    #ns = {'__name__':'__main__'}
+    #exec(prog, ns)
+    # 按下 run 按鈕
+    Ace3.run()
+
+# 執行程式, 顯示輸出結果與清除輸出結果及對應按鈕綁定
+doc['kw_run2'].bind('click', Ace3.run)
+doc['kw_show_console2'].bind('click', Ace3.show_console)
+doc['kw_clear_console2'].bind('click', Ace3.clear_console)
+doc['clear_bd2'].bind('click', clear_bd2)
+# 呼叫函式執行
+run2()
+</script>
+</p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
