--- a/content/W12.html
+++ b/content/W12.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W10.html'>Next</a> >> W10<br /><h1>HW</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
+    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>W12</h1>
+<p></p>
+<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
+<br />W11 << <a href='W11.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
       <div class="container">
