--- a/content/index.html
+++ b/content/index.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='HW.html'>HW</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,10 +140,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>About</h1>
-<p>w8 1b</p>
-<p></p>
-<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p><br /> <a href='cp2022.html'>Next</a> >> cp2022</div>
+    <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
+<br /> <a href='HW.html'>Next</a> >> HW</div>
         
     <!-- footer -->
       <div class="container">
