--- a/content/W10.html
+++ b/content/W10.html
@@ -142,7 +142,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W10</h1>
-<br />HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
+<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/d8d8804d31e4bd107b2f2dacbc225c6a1ad66bc2/w10%2520hw-1.py">作業1</a></p>
+<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/14759ffbcebb0cc63ec9ba7eca22b29ca8805044/w10%2520hw-2.py">作業2</a></p>
+<div>
+<div></div>
+<div>
+<div></div>
+</div>
+</div><br />HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
