--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -8,8 +8,7 @@
 <div></div>
 </div>
 </div><h2>W11</h2>
-<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/d7d0bbb984e18c15f2c4ee1ebdf8058cd78086a5/w11%2520hw-1.py">作業</a></p>
-<h2>W12</h2>
+<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/cb52e4da895d8d42118de5331085b1943950533a/w11hw.py">作業</a></p><h2>W12</h2>
 <p></p>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
