--- a/content/w10.html
+++ b/content/w10.html
@@ -144,12 +144,13 @@ img.add_border {
     <div id="tipue_search_content">hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
 <p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
 <p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
-<p>123</p>
+<p>12</p>
 <div>
 <div>
 <div></div>
 </div>
-</div><br />hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+</div>
+<br />hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
       <div class="container">
