--- a/content/W10.html
+++ b/content/W10.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a></li></ul><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,16 +141,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
-<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
-<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
-<p>12</p>
+    <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W10</h1>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
+<p>1</p>
 <div>
 <div>
 <div></div>
 </div>
 </div>
-<br />hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+<br />HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
