--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,18 +1,49 @@
 <h1>About</h1>
 <h1>HW</h1>
-<h2>W10</h2>
+<h2>w10</h2>
 <p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
 <p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
-<p>1</p>
 <div>
 <div>
 <div></div>
 </div>
 </div>
-<h2>W11</h2>
+<h2>w11</h2>
 <p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/cb52e4da895d8d42118de5331085b1943950533a/w11hw.py">作業</a></p>
-<h2>W12</h2>
+<h2>w12</h2>
 <p></p>
+<h2>w15</h2>
+<div>
+<ul>
+<li>為何學習計算機程式需要建立個人倉儲?</li>
+</ul>
+<p>1.讓學生可自行維護個人頁面以及放置學習資料</p>
+<ul>
+<li>全球資訊網能夠提供甚麼功能或有什麼優點?</li>
+</ul>
+<p>1.除了格式化文字之外，網頁還可能包含圖片、影片、聲音和軟體元件，這些元件會在使用者的網頁瀏覽器中呈現為多媒體內容的連貫頁面</p>
+<ul>
+<li>Replit, stud.cycu.org 與 localhost 分別代表甚麼?</li>
+</ul>
+<p>1.Replit:是提供線上集成開發環境服務的程式<br/>2.stud.cycu.org:學校主機位置<br/>3.localhost:在電腦網路中用於表示「此電腦」的主機名</p>
+<ul>
+<li>https, ssh 到底提供使用者那些功能或優點?</li>
+</ul>
+<p>1.https:(超級文字傳輸協議安全)會在網站受到SSL 憑證保護時在網址中出現<br/>2.ssl:(安全通訊端層)用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊</p>
+<ul>
+<li>Brython 與 Python 有甚麼差別?</li>
+</ul>
+<p>1.</p>
+<ul>
+<li>能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</li>
+</ul>
+<p>1.代表程式設計是萬能的</p>
+<ul>
+<li>變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</li>
+</ul>
+<p>1.代表程式各種中文形容詞.  但程式語言通常以英文表達</p>
+<p></p>
+</div>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
