--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,17 +1,126 @@
 <h1>About</h1>
 <h1>HW</h1>
 <h2>w10</h2>
-<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
-<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
-<div>
-<div>
-<div></div>
-</div>
-</div>
-<h2>w11</h2>
-<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/987cbbb340cc3788188673a8a09639ea0c8bdf8b/w11hw.py">作業</a></p>
-<h2>w12</h2>
-<h2>w13</h2>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">數列間隔使用 ,,</a></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">print("1","3","5","7","9", sep=",", end="")
+# 1, 3, 5, 7, 9</pre>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">w10 成績缺考名單產生</a></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"># 導入 ast 模組是希望利用其 literal_eval() 將 dict 格式的字串轉為 dict 資料型別
+# 以利隨後的取值運算
+import ast
+# 定義一個函式, 以班級代號字串作為輸入, 可以傳回各班修課學員的學號數列
+def get_stud(c_name):
+    # 將課程的班級代號字串作為 dict 的 key, 而 2022 fall 的課程代號作為對應值
+    # 使用者可以利用班級代號從 courses dict 取出課程代號
+    courses = {"1a": "0747", "1b": "0761", "2a": "0773", "2b": "0786"}
+    # 利用 c_name 從 courses 得到該學期的課程代號
+    c = courses[c_name]
+    # 利用課程代號從學校教務主機取的該班修課人員名單
+    url = "https://nfu.cycu.org/?semester=1111&amp;courseno=" + c + "&amp;column=True"
+    # 讀出各修課人員資料後, 以跳行符號切割, 得到的 data 為數列
+    data = open(url).read().split("\n")
+    # 因為最後一筆資料為空字串, 因此利用數列運算將其去除
+    stud = data[:-1]
+    # get_stud() 函式最後將對應班級的修課人員學號以數列格式傳回
+    return stud
+# 利用 "1b" 作為輸入從 get_stud() 取出該班修課學員學號數列
+cp_stud = get_stud("1b")
+# get w10 quiz result
+# # 以下為 1b w10 quiz 考試結果的 JSON 檔案
+cp_w10_quiz_url = "https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/a6825f13b1bb0b61e09e74dd117729eefe1d947f/20221110_cp1b_w10_quiz.json"
+def get_score(url):
+    # 利用 open() 與 read() 讀取考試結果 JSON 檔案
+    json_data = open(url).read()
+    # 利用 ast.literal_eval() 將字串 dict, 轉為程式可用的 dict 資料型別
+    big_dict = ast.literal_eval(json_data)
+    # 從 big_dict 中, 取出 body 中的 testuser 欄位資料
+    data = big_dict["body"]["testuser"]
+    # 定義一個空 dict 資料變數, 隨後利用迴圈逐一將學號作為 key, 考試成績為 valude
+    # 組成 quiz_dict 的資料內容, 以便之後可以用學號當作輸入, 取得該員考試成績
+    quiz_dict = {}
+    for i in data:
+        # data 資料中的 user_name 為考試學員的帳號, 也就是學號
+        stud_id = data[i]["user_name"]
+        # data 資料中的 total_score 欄位為考試成績
+        # 因為考試成績為字串, 先轉為浮點數後, 再轉為整數
+        stud_score = int(float(data[i]["total_score"]))
+        # 逐一以學號為 key, 考試成績為對應 value, 將資料放入 quiz_dict
+        quiz_dict[stud_id] = stud_score
+    # 取得各學員的考試成績 quiz_dict 後, 將資料傳回
+    return quiz_dict
+# 從考試 JSON 檔案中取得考試結果的字典資料
+cp_quiz = get_score(cp_w10_quiz_url)
+# 設定一個空數列, 隨後將利用 append() 方法, 將缺考學員學號存入
+cp_abs = []
+# 從修課學員數列中, 逐一按照學號次序, 以重複迴圈將學號對應至 stud 變數
+for stud in cp_stud:
+    # 因為缺考學員在考試結果的 dict 中並無資料, 因此利用 try except 進行判斷
+    try:
+        # 針對 stud 學號, 有考試成績者, 列出其學號與得分
+        print(stud, cp_quiz[stud])
+    except:
+        # 缺考者沒有 quiz 成績, 則在其成績欄位印出"缺"
+        print(stud, "缺")
+        # 同時將缺考學員學號以 append() 方法逐一置入
+        cp_abs.append(stud)
+# 列出缺考名單
+print("="*20)
+print("以下為 w10 缺考名單:")
+# 因為 cp_abs 資料為 list, 在此利用 for 迴圈逐一列出
+for stud in cp_abs:
+    print(stud)</pre><h2>w11</h2>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/987cbbb340cc3788188673a8a09639ea0c8bdf8b/w11hw.py">w11成績缺考名單平均計算</a></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import ast
+# get stud_list first
+def get_stud(c_name):
+    courses = {"1a": "0747", "1b": "0761", "2a": "0773", "2b": "0786"}
+    #c_name = "1b"
+    c = courses[c_name]
+    url = "https://nfu.cycu.org/?semester=1111&amp;courseno=" + c + "&amp;column=True"
+    data = open(url).read().split("\n")
+    stud = data[:-1]
+    return stud
+    
+cp_stud = get_stud("1b")
+# get w10 quiz result
+cp_w11_quiz_url = "https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/8e59f90d8ff4f1ad4fecd4f7ee159f91eb6addf9/cp1b_w11_quiz_result.json"
+cp_w10_quiz_url = "https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/a6825f13b1bb0b61e09e74dd117729eefe1d947f/20221110_cp1b_w10_quiz.json"
+def get_score(url):
+    num_stud = 0
+    total_score = 0
+    json_data = open(url).read()
+    big_dict = ast.literal_eval(json_data)
+    data = big_dict["body"]["testuser"]
+    quiz_dict = {}
+    for i in data:
+        stud_id = data[i]["user_name"]
+        stud_score = int(float(data[i]["total_score"]))
+        quiz_dict[stud_id] = stud_score
+        num_stud = num_stud + 1
+        total_score = total_score + stud_score
+    return quiz_dict, num_stud, total_score
+    
+#cp_quiz, num_stud, total_score = get_score(cp_w10_quiz_url)
+cp_quiz, num_stud, total_score = get_score(cp_w11_quiz_url)
+cp_abs = []
+for stud in cp_stud:
+    try:
+        print(stud, cp_quiz[stud])
+    except:
+        # 缺考者沒有 quiz 成績
+        print(stud, "缺")
+        cp_abs.append(stud)
+print("\n考試平均分數為:", int(total_score/num_stud))
+# 列出缺考名單
+print("="*20)
+print("以下為 w11 缺考名單:")
+for stud in cp_abs:
+    print(stud)</pre><h2>w12</h2>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/2d3ee3e24c01ad9863d4e845b35d5ea3/raw/3ff3cb673b163bf9bcb13f5466694a343d0bcd9c/w12hw.py">輸入攝氏的溫度值</a></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># Brython 的 input() 可以接受輸入提示字串, 跳出瀏覽器輸入表單後, 將輸入內容以字串取回
+user_input_temp = input("請輸入攝氏溫度值:")
+# 接著列出 user_input_temp 變數的資料型別
+print(type(user_input_temp))</pre><h2>w13</h2>
 <p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/96bc6a5c10ffe9772625cb082678dcf8/raw/36bd92b0638e9585db133e3949a1342c83764c33/w13hw.py">作業</a></p>
 <h2>w14</h2>
 <p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/e1c9ebc8aeaf41e24f63619ca2b54839/raw/dc2723f02e72162b1ddb6feffb5739ac0462e7ce/w14hw.py">作業</a></p>
@@ -242,8 +351,10 @@ origx = 1
 origy = 1
 # 利用 grid 函式畫出格線
 grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
-</script>
-<h1>cp2022</h1>
+
+doc["power"].bind("click", launchAnimation)
+#browser.timer.set_interval(game, 100)
+</script><h1>cp2022</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
