--- a/content/w13.html
+++ b/content/w13.html
@@ -142,8 +142,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w13</h1>
-<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/96bc6a5c10ffe9772625cb082678dcf8/raw/36bd92b0638e9585db133e3949a1342c83764c33/w13hw.py">作業</a></p>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/96bc6a5c10ffe9772625cb082678dcf8/raw/36bd92b0638e9585db133e3949a1342c83764c33/w13hw.py">溫度轉換控制</a></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''
+f = c*9/5+32
+c = (f-32)*5/9
+'''
+c = input("請輸入攝氏溫度值")
+c = float(c)
+#print(c,type(c))
+f=c*9/5+32
+print(c,f)</pre><br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
